--- a/dissertation/l4proj.tex
+++ b/dissertation/l4proj.tex
@@ -428,11 +428,40 @@ a runner if they are beyond the 6 meter catching radius. Overall I felt that usi
 start with. This is because 5 meters should be enough to account for multipath errors and that it would be close enough
 for a runner to recognise that they are caught.
 
+\subsection{Jail Time}
 When a runner is caught, as the new chaser they will be put in Jail Time for 30 seconds. The main reason for this is
 to give the new runners a head start to get out of the area. During this time, the chaser will still be able to move
 around, but they won't have a view of the runners location nor can they catch them. The runner will also get a message
-that the chaser is in jail time. I decided on 30 seconds because it would be enough time for the runner to get away
-from the chaser and depending on where 
+that the chaser is in jail time. I decided on 30 seconds because in most urban areas, it is enough time to get out of
+eyesight from the chaser. I also knew that I needed to strike a balance between giving the runners enough time to get
+away but at the same time not being so much time that there is not enough time for the chaser to catch the runner. 
+
+\subsection{Time Limit and Winning Condition}
+From the start I felt that I needed to consider how long a game should last. I wanted the game to be fast and fun to
+play in a short amount of time since I was aiming at university students. Therefore for this phase of design, I decided
+on 15 minutes. The main reasons why I picked this time is because it would be too long to go a really long distance.
+This means that both the chaser and the runner will be within a very small area. My hope is that this will lead to
+a greater frequency of catches during the course of the game.
+
+For this phase of development, I wanted to keep the winning condition simple. Since I wanted to focus on defining the
+main mechanics of the game, I didn't have a lot of time to think about the condition in which a player could win the
+game. Therefore I decided to keep things simple by saying that the winning player would be the one who spent the longest
+time as a runner player. I felt that since the core mechanic of this game is to keep out of sight from the chaser, if you
+lasted a long time without being caught, then there is a chance that you found a good way of keeping hidden.
+
+\section{User Interface}
+\label{phase1uidesign}
+Once I had designed the main mechanics of the game, I wanted to make a design of the User Interface. To do this I created a wireframe
+on Figma to generate an overall wireframe.
+
+\begin{figure}
+    \centering
+    \includegraphics[width=0.9\linewidth]{images/phase1UIDesign.png}
+    \caption{One of the figma wireframes that I created during my UI design. The first wireframe shows the overall view that a runner
+    player will see, the second frame being what the runner sees when they are in a GPS shadow and the final frame being the view when
+    the player is caught.}
+    \label{fig:phase1uidesign}
+\end{figure}
 
 
 %==================================================================================================================================
