--- a/dissertation/l4proj.tex
+++ b/dissertation/l4proj.tex
@@ -452,11 +452,15 @@ lasted a long time without being caught, then there is a chance that you found a
 \section{User Interface}
 \label{phase1uidesign}
 Once I had designed the main mechanics of the game, I wanted to make a design of the User Interface. To do this I created a wireframe
-on Figma to generate an overall wireframe.
+on Figma to generate an overall wireframe. Figure \ref{fig:phase1uidesign} shows my initial designs for this phase of the game. Since
+this is going to be a location based game, I knew that it would be important to have a map in the centre of the screen. In the first
+wireframe, I show the overall view that a runner player would be able to see. In this case the blue dot shows you the runners location while
+the red dots show the locations of the various shadow areas that I found during my analysis phase. My hope is that this would give the
+users an idea of what areas would be good to hide in.   
 
 \begin{figure}
     \centering
-    \includegraphics[width=0.9\linewidth]{images/phase1UIDesign.png}
+    \includegraphics[width=0.85\linewidth]{images/phase1UIDesign.png}
     \caption{One of the figma wireframes that I created during my UI design. The first wireframe shows the overall view that a runner
     player will see, the second frame being what the runner sees when they are in a GPS shadow and the final frame being the view when
     the player is caught.}
