--- a/dissertation/l4proj.tex
+++ b/dissertation/l4proj.tex
@@ -348,12 +348,31 @@ These ideas ranged from simple games like Tag games such as \emph{Manhunt} or \e
 games that I played in primary school. One notable idea was a game where people with a GPS sensor have to travel to a
 destination without being visible on the map. If they are visible, a watcher would be able to tap on their marker. If
 that happens the GPS players would have to go back to the start. I found that this idea didn't work after making the
-move to the LocationManager API (See section \ref{locationManager} for more details).
+move to the LocationManager API (See section \ref{locationManager} for more details) since the amount of high accuracy
+areas greatly outnumbered the shadow areas.
+
+Once I had completed my brainstorm, I took the ideas that would be feasible to do and started to expand on the ideas a
+bit more. To do this I took a piece of A4 paper, and filled it with ideas of particular Game Mechanics. This allowed me
+to form ideas of what kinds of games would be fun to play. Figure \ref{fig:idea1} shows an example of one of these sheets.
+As you can see they are rather rough but this exercise let me formulate the mechanics, the aims and the winning conditions.
+Also by drawing diagrams, I got better ideas of what the user interface would look like.
+
+After going through those two processes, I took one idea and started generating wireframes using Figma. At this point I
+looked at the technical requirements to get the game working. This usually involved researching what technologies to
+use and to start experimenting with them.
+
+\begin{figure}
+    \centering
+    \includegraphics[width=\linewidth]{images/idea1.pdf} 
+    \caption{My rough paper draft of idea 1}
+    \label{fig:idea1}
+\end{figure}
 
 \section{Overview}
 \label{game-overview}
-The game that I will make is a simple tag game where a player can take advantage of GPS shadows in order to hide from
-the chaser. The chaser will be able to see the other users locations in real time if the runner is in an area with
+After going through all of the steps described in section \ref{phase1designprocess}, the game idea that I settled On
+was a simple tag game where a player can take advantage of GPS shadows in order to hide from
+a "chaser" player. The chaser will be able to see the other users locations in real time if the runner is in an area with
 high GPS accuracy. Once a chaser tags a runner, the caught runner becomes the chaser and a 30 second Jail Time is
 triggered. During this time the catcher cannot see the runner's latest location or is able to catch a runner.
 
@@ -470,7 +489,7 @@ users an idea of what areas would be good to hide in.
 
 \begin{figure}
     \centering
-    \includegraphics[width=0.85\linewidth]{images/phase1UIDesign.png}
+    \includegraphics[width=0.8\linewidth]{images/phase1UIDesign.png}
     \caption{One of the figma wireframes that I created during my UI design. The first wireframe shows the overall view that a runner
     player will see, the second frame being what the runner sees when they are in a GPS shadow and the final frame being the view when
     the player is caught.}
