Added an extra paragraph on the User interface design and added a new screenshot for the ui_chaser

--- a/dissertation/l4proj.tex
+++ b/dissertation/l4proj.tex
@@ -485,7 +485,11 @@ on Figma to generate an overall wireframe. Figure \ref{fig:phase1uidesign} shows
 this is going to be a location based game, I knew that it would be important to have a map in the centre of the screen. In the first
 wireframe, I show the overall view that a runner player would be able to see. In this case the blue dot shows you the runners location while
 the red dots show the locations of the various shadow areas that I found during my analysis phase. My hope is that this would give the
-users an idea of what areas would be good to hide in.   
+users an idea of what areas would be good to hide in.
+
+The second and third frames in \ref{fig:phase1uidesign} show what happens when the runner is in a shadow and whenever the runner has been
+caught. The plan would be that in the third frame, it will include several differnt messages like whether a player has joined or left the
+game, to inform the player that the game has ended or to inform the player on what player type they are. 
 
 \begin{figure}
     \centering
